codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4152
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
" Elpis · model gpt-5.2 high · location /tmp/project · Roadmap cleanup           "
"│                                               │CONTEXT LEDGER  context not    "
"› Ask Elpis to do anything                      │measured · ≈0 source estimates "
"│                                               │Tab controls · Alt+C hide ·    "
"        100% context left · Tab Context Ledger  │Ctrl+click open file           "
"                                                │                               "
"                                                │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
