codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_in_progress_turn.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Elpising… (0s • esc to interrupt)               │CONTEXT LEDGER  context not
                                                │measured · ≈0 source estimates
┌──────────────────────────────────────────────┐│Tab controls · Alt+C hide ·
› Ask Elpis to do anything                     ││Ctrl+click open file
└──────────────────────────────────────────────┘│
        100% context left · Tab Context Ledger  │SMART PRUNE          [···] SYNC
                                                │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
