codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1511
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

 Elpis · model gpt-5.6-sol default · location /tmp/project
Elpising… (0s • esc to interrupt)               │CONTEXT LEDGER  context not
                                                │measured · ≈0 source estimates
• Messages to be submitted at end of turn       │Tab controls · Alt+C hide ·
  ↳ Steer submitted while /review was running.  │Ctrl+click open file
│                                               │
› Ask Elpis to do anything                      │SMART PRUNE          [···] SYNC
│                                               │Reading current thread state
        100% context left · Tab Context Ledger  │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
