codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__running_hooks_share_background_activity_row.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4593
expression: "format!(\"80 columns:\\n{}\\n120 columns:\\n{}\", hook_status_frame(&chat, 80),\nhook_status_frame(&chat, 120),)"
---
80 columns:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"Elpising… (0s • esc to interrupt) · 1 backgroun…│ CONTEXT LEDGER  context not   "
"  └ checking command policy                     │ measured · ≈0 source          "
"                                                │ estimates                     "
"────────────────────────────────────────────────┤ Tab controls · Alt+C hide ·   "
"› Ask Elpis to do anything                      │ Ctrl+click open file          "
"────────────────────────────────────────────────┤                               "
"        100% context left · Tab Context Ledger  │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
120 columns:
"                                                                                                                        "
" Elpis · model gpt-5.6-sol default · location /tmp/project                                                              "
"Elpising… (0s • esc to interrupt) · 1 background terminal running · /ps…│ CONTEXT LEDGER  context not measured · ≈0     "
"  └ checking command policy                                             │ source estimates                              "
"                                                                        │ Tab controls · Alt+C hide · Ctrl+click open   "
"────────────────────────────────────────────────────────────────────────┤ file                                          "
"› Ask Elpis to do anything                                              │                                               "
"────────────────────────────────────────────────────────────────────────┤ SMART PRUNE                       [···] SYNC  "
"  ? for shortcuts               100% context left · Tab Context Ledger  │ Reading current thread state                  "
"                                                                        │ Syncing… · /smart-prune on|off sets an        "
"                                                                        │ explicit state                                "
"                                                                        │                                               "
"                                                                        │ SUBAGENTS                          [━━━●] ON  "
"                                                                        │ May delegate to other agents                  "
"                                                                        │                                               "
"                                                                        │ CONTEXT WINDOW  usage unavailable             "
"                                                                        │ Context measurement unavailable until the     "
"                                                                        │ first request snapshot                        "
"                                                                        │                                               "
"                                                                        │ No portable context is available.             "
