codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_status_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 432
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Giving this request a little extra thought


› 1. Dismiss and keep waiting
  2. Learn more

  No action is required. Elpis will keep waiting, and this menu will close when
  the response is ready.
